# icann_reports

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: changelog.yml
changelog.d/shared/: 0002.chore.md
docs/: RELEASE_PROCESS.md
icann_reports/: __init__.py  main.py
icann_reports/downloader/: csv_downloader.py  url_generator.py
icann_reports/models/: field_metadata.py
icann_reports/processor/: csv_processor.py  field_validation.py  reports.py
icann_reports/utils/: cache.py  file_structure.py  logging_setup.py
scripts/: check_changelog.py
tests/: README.md  conftest.py
tests/features/: csv_processor.feature  field_validation.feature  reports_generator.feature  url_generator.feature
tests/steps/: test_csv_processor.py  test_field_validation.py  test_reports.py  test_url_generator.py
